Changes to be committed:     modified:   .vscode/launch.json 	modified:   .vscode/tasks.json
Configurações de compilação do VSCode
    include das pastas third-party e third-party/sqlite_modern_cpp
    alteração/adição de flags: -std=c++17, -lsqlite3

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,7 +2,7 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Launch debug Lucas",
+            "name": "Launch debug PDS2-team3",
             "type": "cppdbg",
             "request": "launch",
             "program": "${workspaceFolder}/main",
@@ -29,7 +29,7 @@
                     "ignoreFailures": true
                 }
             ],
-            "preLaunchTask": "Tasks build Lucas",
+            "preLaunchTask": "Tasks build PDS2-team3",
             "miDebuggerPath": "/usr/bin/gdb"
         }
     ]
