On branch ajustes  Changes to be committed: 	modified:   .vscode/tasks.json 	modified:   Makefile 	new file:   Makefile copy 	deleted:    bin/main 	deleted:    bin/main.gcno 	deleted:    build/acervo.o 	deleted:    build/adm.o 	deleted:    build/bibliotecario.o 	deleted:    build/entidadebase.o 	deleted:    build/livro.o 	deleted:    build/teste_code.o 	deleted:    build/usuario.o 	new file:   data/db_bbt.db 	modified:   include/adm.hpp 	modified:   include/bbt_wrapper_sql.hpp 	modified:   include/bibliotecario.hpp 	modified:   include/db_acervo.hpp 	modified:   include/db_administradores.hpp 	modified:   include/db_usuarios.hpp 	modified:   include/definicoes.hpp 	modified:   include/entidadebase.hpp 	modified:   include/livro.hpp 	modified:   include/usuario.hpp 	new file:   main 	renamed:    main.cpp -> main copy.cpp 	new file:   program/main.cpp 	modified:   src/adm.cpp 	modified:   src/bibliotecario.cpp 	modified:   src/coluna_sql.cpp 	modified:   src/db_acervo.cpp 	modified:   src/db_administradores.cpp 	modified:   src/db_usuarios.cpp 	modified:   src/entidadebase.cpp 	modified:   src/livro.cpp 	modified:   src/usuario.cpp 	deleted:    test 	modified:   tests/teste_code.cpp 	modified:   tests/teste_db.cpp

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -11,7 +11,9 @@
                 "-I",
                 "${workspaceFolder}/include",
                 "-I",
-                "${workspaceFolder}/third-party",
+                "${workspaceFolder}/third_party",
+                "-I",
+                "${workspaceFolder}/third_party/sqlite_modern_cpp",
                 "-lsqlite3",
                 "-o",
                 "${workspaceFolder}/main"
