On branch ajustes2  Changes to be committed:     modified:   .vscode/launch.json 	modified:   .vscode/settings.json 	modified:   .vscode/tasks.json 	deleted:    Makefile copy 	modified:   data/db_bbt.db 	new file:   import/livros.csv 	modified:   include/adm.hpp 	modified:   include/bibliotecario.hpp 	modified:   include/db_acervo.hpp 	modified:   include/db_administradores.hpp 	modified:   include/db_usuarios.hpp 	modified:   include/definicoes.hpp 	modified:   include/entidadebase.hpp 	new file:   main 	modified:   program/main.cpp 	modified:   src/adm.cpp 	modified:   src/bibliotecario.cpp 	modified:   src/db_acervo.cpp 	modified:   src/livro.cpp

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -8,12 +8,11 @@
                 "-std=c++20",
                 "-g",
                 "${workspaceFolder}/src/*.cpp",
+                "${workspaceFolder}/program/main.cpp",
                 "-I",
                 "${workspaceFolder}/include",
                 "-I",
                 "${workspaceFolder}/third_party",
-                "-I",
-                "${workspaceFolder}/third_party/sqlite_modern_cpp",
                 "-lsqlite3",
                 "-o",
                 "${workspaceFolder}/main"
